<resources>
    <string name="client_id">391234366901-89jd7v5nt3ibsk7bsdtbapsjkmnss3bh.apps.googleusercontent.com</string>

    <!-- App Title -->
    <string name="app_name">FitHub-Set Workout Tracker</string>

    <!-- Home Page Strings-->
    <string name="calendar_title">November 2024</string>
    <string name="name_txt">FitHub</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="alarm">Alarm Timer</string>

    <!-- Bottom Navigation Strings -->
    <string name="nav_sets">Workouts</string>
    <string name="nav_home">Home</string>
    <string name="nav_user">User</string>
    <string name="home">Home</string>
    <string name="sets">Sets</string>
    <string name="user_icon">User</string>

    <!-- Account Page -->
    <string name="acc_page">Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="send_feedback"><u>Send Feedback</u></string>
    <string name="help_and_support"><u>Help and Support</u></string>
    <string name="follow"><u>Follow @CBZ Inc.</u></string>
    <string name="account">Signed in as:</string>
    <string name="prof_pic">Profile Picture</string>


    <!-- LoginPage Strings -->
    <string name="login">Sign In</string>
    <string name="login_2">Sign Up</string>
    <string name="save">Save</string>
    <string name="terms"><u>Terms and Condition</u></string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="show_pass">Show Password</string>
    <string name="continues">Or Sign in with</string>
    <string name="google_auth">Sign in with Google</string>
    <string name="signup_now">Not yet registered? <u>Sign Up Now</u></string>
    <string name="login_here">Already a user? <u>Login here</u></string>


    <!-- SetTrackerPage Strings -->
    <string name="add_exercise_description">Add Exercise</string>
    <string name="Back_arrow_description">Back Button</string>
    <string name="Program">Program</string>
    <string name="Weight">BW(Kg)</string>
    <string name="Date">mm/d/yyyy</string>
    <string name="S_time">Start Time</string>
    <string name="E_time">End Time</string>
    <string name="Notes">Notes</string>
    <string name="finish">Finish</string>
    <string name="Add_Exercise">+ Add Exercise</string>
    <string name="Select_exercise">Select Exercise</string>
    <string name="Select_Workout">Select Workout</string>
    <string name="Reps">Reps</string>
    <string name="LB">LB</string>
    <string name="workoutName">Workout Name</string>
    <string name="hashtag">#</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="add_set">+ Add Set</string>
    <string name="Menu_Description">menu_icon</string>

    <!-- UpdateExercise Strings -->
    <string name="update">Update</string>
    <string name="update_name">Update Exercise</string>
    <string name="update_exercise">^ Update Exercise</string>
    <string name="add_name">Add Exercise</string>


    <!-- Homepage Strings -->
    <string name="appname">Navigation Drawer</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="user">User</string>
    <string name="zero_days">0 Day/s</string>
    <string name="streak">Streak/s</string>
    <string name="workout">Workout/s</string>
    <string name="top_program">Latest Weight</string>
    <string name="workout_calendar">Workout Calendar</string>
    <string name="start_workout">Start Workout</string>
    <string name="welcome">Welcome back! 💪</string>
    <string name="user_name">Name</string>

    <!-- Main Menu Strings -->
    <string name="menu_dark">Dark Mode</string>
    <string name="menu_feedback"><u>Feedback</u></string>
    <string name="menu_terms"><u>Terms and Condition</u></string>
    <string name="menu_about"><u>About Us</u></string>
    <string name="log_out">Sign Out</string>


</resources>
