<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewpager"
    android:padding="16dp"
    tools:context=".UpdateExercise">

    <LinearLayout
        android:id="@+id/exercise_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/arrow_back_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/Back_arrow_description"
                android:src="@drawable/arrow_back"/>

            <Button
                android:id="@+id/finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textColor="@color/blue"
                android:visibility="gone"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/update_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/update_name"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/Popup_menu_update"
                android:layout_width="35dp"
                android:layout_height="38dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="3dp"
                android:contentDescription="@string/Menu_Description"
                android:background="@null"
                android:scaleType="fitCenter" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/Program_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:autofillHints="Exercise"
                    android:background="@drawable/add_exercise_bg"
                    android:backgroundTint="@color/textbg"
                    android:hint="@string/Program"
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/weight_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="weight"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/Weight"
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:inputType="number"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor"
                    android:backgroundTint="@color/textbg"
                    android:padding="15dp"
                    android:layout_marginBottom="4dp"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/date_picker_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="date"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/Date"
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:inputType="date"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor"
                    android:backgroundTint="@color/textbg"
                    android:padding="15dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:onClick="showDatePicker" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/time_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Time"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/S_time"
                    android:textSize="14sp"
                    android:fontFamily="@font/medium"
                    android:inputType="time"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor"
                    android:backgroundTint="@color/textbg"
                    android:padding="15dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:onClick="showTimePicker" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/end_time_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_exercise_bg"
                    android:backgroundTint="@color/textbg"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/medium"
                    android:hint="@string/E_time"
                    android:inputType="time"
                    android:onClick="showTimePicker"
                    android:padding="15dp"
                    android:textColor="@color/textcolor"
                    android:textColorHint="@color/textcolor"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/notes_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_exercise_bg"
                android:backgroundTint="@color/textbg"
                android:hint="@string/Notes"
                android:textSize="17sp"
                android:inputType="text"
                android:fontFamily="@font/medium"
                android:autofillHints="notes"
                android:textColorHint="@color/textcolor"
                android:textColor="@color/textcolor"
                android:padding="15dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workout_details"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/workoutname"
                android:text="@string/workoutName"
                android:textSize="18sp"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@color/textbg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashtag"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/bold"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LB"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reps"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Notes"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/bold" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_add_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_set"
                android:backgroundTint="@color/button"
                android:textColor="@color/textcolor"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_update_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_exercise"
            android:textSize="16sp"
            android:fontFamily="@font/medium"
            android:backgroundTint="@color/button"
            android:textColor="@color/textcolor"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/update_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/medium"
            android:text="@string/update"
            android:textColor="@color/textcolor"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
