<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/Back_arrow_description"
                android:src="@drawable/arrow_back" />

            <Button
                android:id="@+id/finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textColor="@color/blue"
                android:visibility="gone"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:paddingStart="25dp"
                android:textSize="16sp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/Program"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:autofillHints="Exercise"
                    android:background="@drawable/add_exercise_bg"
                    android:backgroundTint="@color/blue"
                    android:hint="@string/Program"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="weight"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/Weight"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:backgroundTint="@color/blue"
                    android:padding="15dp"
                    android:layout_marginBottom="4dp"
                    android:focusable="true" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/date_picker_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="date"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/Date"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:backgroundTint="@color/blue"
                    android:padding="15dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:onClick="showDatePicker" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginEnd="8dp">
                <EditText
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Time"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/S_time"
                    android:inputType="time"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:backgroundTint="@color/blue"
                    android:padding="15dp"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:onClick="showTimePicker" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_exercise_bg"
                    android:hint="@string/E_time"
                    android:inputType="time"
                    android:textColorHint="@color/black"
                    android:backgroundTint="@color/blue"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:focusable="false"
                    android:focusableInTouchMode="true"
                    android:onClick="showTimePicker" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/add_exercise_bg"
                android:backgroundTint="@color/blue"
                android:hint="@string/Notes"
                android:autofillHints="notes"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:padding="15dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/workout_details"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/workout_name"
                android:text="@string/workoutName"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:background="@color/blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashtag"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/LB"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Reps"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Notes"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                tools:ignore="ExtraText">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="0"
                    android:background="@drawable/add_exercise_bg"
                    android:backgroundTint="@color/blue"
                    android:text="@string/zero"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:padding="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="0"
                    android:background="@drawable/add_exercise_bg"
                    android:inputType="number"
                    android:text="@string/zero"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/blue"
                    android:padding="8dp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="notes"
                    android:background="@drawable/add_exercise_bg"
                    android:backgroundTint="@color/blue"
                    android:inputType="text"
                    android:textColorHint="@color/blue"
                    android:textColor="@color/black"
                    android:padding="8dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_add_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_set"
                android:backgroundTint="@color/light_blue"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Add_Exercise"
            android:backgroundTint="@color/light_blue"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
